# IN-Space-Cansat-2025

./: .gitignore
3D CAD Models/: parachute_compartment_final.step  section_divider_final.step  spacer_final.step
CanSat Flight Computer/: .gitignore  CMakeLists.txt  README.md  REQUIREMENTS.md
CanSat Flight Computer/.github/workflows/: Verification.yml  ci.yml
CanSat Flight Computer/src/: BlackBox.h  DataBuffer.h  KalmanFilter.h  OLEDDisplay.h  SensorFusion.h  Telemetry.h  config.h  sensors.h  src.ino
CanSat Flight Computer/tests/: CMakeLists.txt  test_blackbox.cpp  test_data_buffer.cpp  test_example.cpp  test_integration.cpp  test_kalman_filter.cpp  test_performance.cpp  test_runner.cpp  test_safety.cpp  test_sensor_fusion.cpp  test_sensors.cpp  test_state_machine.cpp  test_system_simulation.cpp  test_telemetry.cpp
CanSat Flight Computer/tests/data/: sample_telemetry.csv
CanSat Flight Computer/tests/mocks/: Arduino.h  LoRa.h  Preferences.h  SPI.h  SPIFFS.h  Wire.h  arduino_mock.cpp  arduino_mock.h  arduino_mock_old.cpp  arduino_mock_old.h  sensor_mock.cpp  sensor_mock.h
Data-main/: README.md  flight_data_20251107_164203.csv
Ground Control Station/: .gitignore  README.md
Ground Control Station/3D_GUI/: .gitignore  CanSat.tsx  package-lock.json  package.json  pnpm-lock.yaml
Ground Control Station/3D_GUI/app/: globals.css  layout.tsx  page.tsx
Ground Control Station/3D_GUI/components/: CanSat.tsx  CanSatTracker.tsx  LocationView.tsx  OrientationView.tsx  PositionGraph.tsx  Terminal.tsx
Ground Control Station/3D_GUI/pages/: GCSDashboard.tsx
Ground Control Station/API/: INTEGRATION_GUIDE.md  README.md  connect_esp32.py  demo.py  find_ports.py  main.py  parser.py  requirements.txt  simple_test.py  start.sh  telemetry_example.csv  telemetry_example_long.csv  test_esp32_format.py
Ground Control Station/API/Data/: data_log.csv  events.txt
Ground Control Station/ESP_GCS/: ESP_GCS.ino
Individual Component Codes/: README.md
Individual Component Codes/.github/workflows/: release.yaml  setup_folder.yml
Individual Component Codes/AQ/: README.md
Individual Component Codes/AQ/MQ135/: MQ135.ino  README.md
Individual Component Codes/AQ/MQ5/: MQ5.ino  README.md
Individual Component Codes/Archived/: README.md
Individual Component Codes/Archived/BMP390/: README.md
Individual Component Codes/BMP290/: README.md
Individual Component Codes/Data/: README.md
Individual Component Codes/GPS/: GPS.ino  README.md
Individual Component Codes/Gyro/: dshot_esc_bldc_test.ino  gps_formatted.ino  gyro.ino  imu_log_sd.ino  single_axis_gyro.ino  test_dshot.ino  test_dual_servo.ino  test_esp.ino  test_gps.ino  volt_meas.ino
Individual Component Codes/IMU/: README.md
Individual Component Codes/LPS22/: LPS22.ino  README.md
Individual Component Codes/LoRa/: CanSat.ino  GS.ino  README.md  parser.py
Individual Component Codes/Multimodule/: Multimodule.ino  README.md
Individual Component Codes/OLED/: OLED.ino  README.md
Individual Component Codes/SHT41/: README.md  SHT41.ino
Individual Component Codes/XBee/: README.md  XBee.ino
Parachute/: README.md  code.ino
Sensor Datasheets/: README.md
Simulation/: .gitignore  README.md
Simulation/sim_gazebo/src/: controller_node.cpp
Simulation/sim_gazebo/src/cansat_simulation/: CMakeLists.txt  CMakeLists.txt.save  package.xml
Simulation/sim_gazebo/src/cansat_simulation/launch/: simulate_cansat.launch.py
Simulation/sim_gazebo/src/cansat_simulation/src/: aerodynamics_plugin.cpp  controller_node.cpp  reaction_wheel_plugin.cpp
Simulation/sim_gazebo/src/cansat_simulation/urdf/: cansat.urdf
Simulation/sim_gazebo/src/cansat_simulation/worlds/: empty.world
Simulation/sim_mujoco/: cansat_model.xml  cansat_sim.py
